# data

./: .gitignore  .pre-commit-config.yaml  README.adoc  README.md  devenv.nix  flake.nix  pyproject.toml
src/iesude/data/: __init__.py  _cloud_client.py  _external_deps.py  _oc_cloud_client.py  archives.py  dataset.py  downloader.py  extractable.py
test/: system_test.py
