[project]
name = "iesude.data"
version = "0.1.0"
description = "Download datasets provided by the intelligent embedded systems group from university Duisburg-Essen"
readme = "README.md"
authors = [{ name = "Lukas Einhaus", email = "lukas.einhaus@uni-due.de" }]
requires-python = ">=3.10"
dependencies = ["pyocclient>=0.6"]


[dependency-groups]
dev = ["mypy>=1.13.0", "pytest>=8.3.3", "ruff>=0.7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iesude"]
